--- a/org.eclipse.cdt.cross.arc.gnu/plugin.xml
+++ b/org.eclipse.cdt.cross.arc.gnu/plugin.xml
@@ -268,9 +268,11 @@
                </property>
             </supportedProperties>
          </option>
-         <option id="org.eclipse.cdt.cross.arc.gnu.base.option.target.endiannes"
-         		 name="Endianness"
-         		 valueType="enumerated">
+         <option
+               applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
+               id="org.eclipse.cdt.cross.arc.gnu.base.option.target.endiannes"
+               name="Endianness"
+               valueType="enumerated">
            <enumeratedOptionValue
                  command="-mlittle-endian"
                  id="org.eclipse.cdt.cross.arc.gnu.base.option.target.endiannes.little"
@@ -663,6 +665,31 @@
                id="org.eclipse.cdt.cross.arc.gnu.base.option.target.abiselection.mwabi"
                name="MW-compatible ABI (-mabi=mwabi)">
          </enumeratedOptionValue>
+      </option>
+      <option
+            applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
+            defaultValue="false"
+            id="org.eclipse.cdt.cross.arc.gnu.base.option.target.tcf"
+            name="TCF"
+            resourceFilter="all"
+            style="radio"
+            valueType="boolean">
+      </option>
+      <option
+            applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
+            browseType="file"
+            id="org.eclipse.cdt.cross.arc.gnu.base.option.target.filefortcf"
+            isAbstract="false"
+            name="TCF path"
+            resourceFilter="all"
+            valueType="string">
+      </option>
+      <option
+            applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
+            defaultValue="false"
+            id="org.eclipse.cdt.cross.arc.gnu.base.option.target.maptcf"
+            name="Use memory map from TCF"
+            valueType="boolean">
       </option>
 
       </tool>
@@ -1471,6 +1498,7 @@
                owner="org.eclipse.cdt.cross.arc.gnu.c.linker">
          </optionCategory>
          <option
+               applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
                browseType="file"
                category="org.eclipse.cdt.cross.arc.gnu.c.link.category.general"
                command="-T&quot;${VALUE}&quot;"
@@ -1639,6 +1667,7 @@
                owner="org.eclipse.cdt.cross.arc.gnu.cpp.linker">
          </optionCategory>
          <option
+               applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
                browseType="file"
                category="org.eclipse.cdt.cross.arc.gnu.cpp.link.category.general"
                command="-T&quot;${VALUE}&quot;"
@@ -2369,18 +2398,31 @@
                name="ARC ELF32 GNU Print Size"
                superClass="org.eclipse.cdt.cross.arc.gnu.printsize">
          </tool>
-
-         <!--
          <option
                applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
                category="org.eclipse.cdt.cross.arc.gnu.linux.category.target"
-               commandGenerator="org.eclipse.cdt.cross.arc.gnu.ARCManagedCommandLineGenerator"
-               id="org.eclipse.cdt.cross.arc.gnu.linux.option.target.fpuem"
-               isAbstract="false"
-               name="FPU  EM Type"
-               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.fpuem">
+               id="org.eclipse.cdt.cross.arc.gnu.em.linux.option.target.tcf"
+               name="TCF"
+               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.tcf"
+               valueType="boolean">
          </option>
-         -->
+         <option
+               applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
+               category="org.eclipse.cdt.cross.arc.gnu.linux.category.target"
+               id="org.eclipse.cdt.cross.arc.gnu.em.linux.option.target.filefortcf"
+               name="TCF path"
+               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.filefortcf"
+               valueType="string">
+         </option>
+         <option
+               applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
+               category="org.eclipse.cdt.cross.arc.gnu.linux.category.target"
+               id="org.eclipse.cdt.cross.arc.gnu.em.linux.option.target.maptcf"
+               name=" Use memory map from TCF"
+               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.maptcf"
+               valueType="boolean">
+         </option>
+
       </toolChain>
       <configuration
             cleanCommand="rm -rf"
@@ -2974,24 +3016,52 @@
                name="Bitscan instruction (-mnorm) "
                superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.normalize">
          </option>
+         <tool
+               id="org.eclipse.cdt.cross.arc.gnu.eb.linux.printsize.base"
+               isAbstract="false"
+               name="ARC ELF32 GNU Print Size "
+               superClass="org.eclipse.cdt.cross.arc.gnu.eb.printsize">
+            <enablement
+                  type="ALL">
+               <checkOption
+                     holderId="org.eclipse.cdt.cross.arc.gnu.eb.linux.toolchain.base"
+                     optionId="org.eclipse.cdt.cross.arc.gnu.eb.linux.option.addtools.printsize"
+                     value="true">
+               </checkOption>
+               <and>
+                  <checkBuildProperty
+                        property="org.eclipse.cdt.build.core.buildArtefactType"
+                        value="org.eclipse.cdt.cross.arc.gnu.buildArtefactType.application">
+                  </checkBuildProperty>
+               </and>
+            </enablement>
+         </tool>
          <option
                applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
                category="org.eclipse.cdt.cross.arc.gnu.em.eb.linux.category.target"
-               id="org.eclipse.cdt.cross.arc.gnu.eb.linux.option.target.atomic"
-               name="Atomic functions (-matomic)"
-               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.atomic">
+               id="org.eclipse.cdt.cross.arc.gnu.em.eb.linux.option.target.tcf"
+               name="TCF"
+               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.tcf"
+               valueType="boolean">
+         </option>
+         <option
+               applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
+               browseType="file"
+               category="org.eclipse.cdt.cross.arc.gnu.em.eb.linux.category.target"
+               id="org.eclipse.cdt.cross.arc.gnu.em.eb.linux.option.target.filefortcf"
+               name="TCF path"
+               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.filefortcf"
+               valueType="string">
+         </option>
+         <option
+               applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
+               category="org.eclipse.cdt.cross.arc.gnu.em.eb.linux.category.target"
+               id="org.eclipse.cdt.cross.arc.gnu.em.eb.linux.option.target.maptcf"
+               name=" Use memory map from TCF"
+               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.maptcf"
+               valueType="boolean">
          </option>
 
-         
-         <!--
-         <option
-               category="org.eclipse.cdt.cross.arc.gnu.eb.linux.category.target"
-               id="org.eclipse.cdt.cross.arc.gnu.eb.linux.option.target.fpuem"
-               isAbstract="false"
-               name="FPU  EM Type"
-               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.fpuem">
-         </option>
-         -->
       </toolChain>
       <projectType
             buildArtefactType="org.eclipse.cdt.cross.arc.gnu.buildArtefactType.staticLib"
@@ -3492,6 +3562,31 @@
                id="org.eclipse.cdt.cross.arc.gnu.hs.linux.option.target.abiselection"
                name="ABI selection "
                superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.abiselection">
+         </option>
+         <option
+               applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
+               category="org.eclipse.cdt.cross.arc.gnu.hs.linux.category.target"
+               id="org.eclipse.cdt.cross.arc.gnu.hs.linux.option.target.tcf"
+               name="TCF"
+               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.tcf"
+               valueType="boolean">
+         </option>
+         <option
+               applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
+               browseType="file"
+               category="org.eclipse.cdt.cross.arc.gnu.hs.linux.category.target"
+               id="org.eclipse.cdt.cross.arc.gnu.hs.linux.option.target.filefortcf"
+               name="TCF path"
+               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.filefortcf"
+               valueType="string">
+         </option>
+         <option
+               applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
+               category="org.eclipse.cdt.cross.arc.gnu.hs.linux.category.target"
+               id="org.eclipse.cdt.cross.arc.gnu.hs.linux.option.target.maptcf"
+               name=" Use memory map from TCF"
+               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.maptcf"
+               valueType="boolean">
          </option>
       </toolChain>
       <projectType
@@ -4710,6 +4805,31 @@
                id="org.eclipse.cdt.cross.arc.gnu.hs.eb.linux.option.target.abiselection"
                name="ABI selection "
                superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.abiselection">
+         </option>
+         <option
+               applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
+               category="org.eclipse.cdt.cross.arc.gnu.hs.eb.linux.category.target"
+               id="org.eclipse.cdt.cross.arc.gnu.hs.eb.linux.option.target.tcf"
+               name="TCF"
+               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.tcf"
+               valueType="boolean">
+         </option>
+         <option
+               applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
+               browseType="file"
+               category="org.eclipse.cdt.cross.arc.gnu.hs.eb.linux.category.target"
+               id="org.eclipse.cdt.cross.arc.gnu.hs.eb.linux.option.target.filefortcf"
+               name="TCF path"
+               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.filefortcf"
+               valueType="string">
+         </option>
+         <option
+               applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
+               category="org.eclipse.cdt.cross.arc.gnu.hs.eb.linux.category.target"
+               id="org.eclipse.cdt.cross.arc.gnu.hs.eb.linux.option.target.maptcf"
+               name=" Use memory map from TCF"
+               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.maptcf"
+               valueType="boolean">
          </option>
       </toolChain>
       <configuration
