--- a/org.eclipse.cdt.cross.arc.gnu/plugin.xml
+++ b/org.eclipse.cdt.cross.arc.gnu/plugin.xml
@@ -2519,7 +2519,7 @@
                      superClass="org.eclipse.cdt.cross.arc.gnu.em.linux.cpp.compiler.base">
                </tool>
                <tool
-                     id="org.eclipse.cdt.cross.arc.gnu.em.linux.elf.c.linker.release"
+                     id="org.eclipse.cdt.cross.arc.gnu.linux.elf.c.linker.release"
                      isAbstract="false"
                      superClass="org.eclipse.cdt.cross.arc.gnu.em.linux.c.linker.base">
                </tool>
@@ -6658,7 +6658,7 @@
                      superClass="org.eclipse.cdt.cross.arc.gnu.em.linux.cpp.compiler.base">
                </tool>
                <tool
-                     id="org.eclipse.cdt.cross.arc.gnu.em.linux.elf.c.linker.release.emsk"
+                     id="org.eclipse.cdt.cross.arc.gnu.linux.elf.c.linker.release.emsk"
                      isAbstract="false"
                      superClass="org.eclipse.cdt.cross.arc.gnu.em.linux.c.linker.base">
                </tool>
@@ -7033,7 +7033,7 @@
                      superClass="org.eclipse.cdt.cross.arc.gnu.em.linux.cpp.compiler.base">
                </tool>
                <tool
-                     id="org.eclipse.cdt.cross.arc.gnu.em.linux.elf.c.linker.release.axs101"
+                     id="org.eclipse.cdt.cross.arc.gnu.linux.elf.c.linker.release.axs101"
                      isAbstract="false"
                      superClass="org.eclipse.cdt.cross.arc.gnu.em.linux.c.linker.base">
                </tool>
