9000985736: Fix invalid syntax error for big endian
On Windows Eclipse wasn't able to find location of standard library headers
for big endian toolchain. As a result headers like "stdio.h" were marked as
"unknown" and thus all of the functions, like printf were unresolved as
well. This problem was only with Eclipse syntax checker, application was
built without an error.

It was found that this happens because for big endian Eclipse tries to
figure out location of stdlib headers via invocation of `gcc` instead of
`arceb-elf32-gcc`. Hence the problem itself was not specific to Windows, it
is just that on Linux systems we usually have `gcc` in the PATH, so headers
of host system were used for syntax check. Everything was find for little
endian systems.

It was notoriously hard to understand where the difference between little and
big endian comes from, in part because big endian toolchain inherits from
little endian one, so XML definitions for them are different per definition.
Investigation became easier after it was realized that this difference
happens only for compiler, but not for assembler, and after comparing big
endian assembler and compiler it was found that redefinition of `<inputType>`
for big endian compiler is not needed. It is not clear to me how this
additional `<inputType>` was causing the behaviour we were observing, but
nevertheless problem was fixed after I removed this extra tag.

Signed-off-by: Anton Kolesov <Anton.Kolesov@synopsys.com>

--- a/org.eclipse.cdt.cross.arc.gnu/plugin.xml
+++ b/org.eclipse.cdt.cross.arc.gnu/plugin.xml
@@ -2647,16 +2647,6 @@
             isAbstract="false"
             name="ARC GCC C Compiler (EB)"
             superClass="org.eclipse.cdt.cross.arc.gnu.c.compiler">
-         <inputType
-               dependencyCalculator="org.eclipse.cdt.managedbuilder.makegen.gnu.DefaultGCCDependencyCalculator2"
-               dependencyContentType="org.eclipse.cdt.core.cHeader"
-               dependencyExtensions="h"
-               id="org.eclipse.cdt.cross.arc.gnu.eb.c.compiler.input"
-               languageId="org.eclipse.cdt.core.gcc"
-               sourceContentType="org.eclipse.cdt.core.cSource"
-               sources="c"
-               superClass="cdt.managedbuild.tool.gnu.c.compiler.input">
-         </inputType>
       </tool>
       <tool
             command="arceb-elf32-g++"
@@ -2664,10 +2654,6 @@
             isAbstract="false"
             name="ARC GCC C++ Compiler (EB)"
             superClass="org.eclipse.cdt.cross.arc.gnu.cpp.compiler">
-         <inputType
-               id="org.eclipse.cdt.cross.arc.gnu.eb.cpp.compiler.input"
-               superClass="cdt.managedbuild.tool.gnu.cpp.compiler.input">
-         </inputType>
       </tool>
       <tool
             command="arceb-elf32-gcc"
@@ -2865,7 +2851,7 @@
             <inputType
                   id="org.eclipse.cdt.cross.arc.gnu.em.eb.linux.c.compiler.base.input"
                   scannerConfigDiscoveryProfileId="org.eclipse.cdt.cross.arc.gnu.ARC_EB_GCCManagedMakePerProjectProfileC|org.eclipse.cdt.cross.arc.gnu.ARC_GCCStandardMakePerFileProfile"
-                  superClass="org.eclipse.cdt.cross.arc.gnu.eb.c.compiler.input">
+                  superClass="org.eclipse.cdt.cross.arc.gnu.c.compiler.input">
             </inputType>
          </tool>
          <tool
@@ -2876,7 +2862,7 @@
             <inputType
                   id="org.eclipse.cdt.cross.arc.gnu.em.eb.linux.cpp.compiler.base.input"
                   scannerConfigDiscoveryProfileId="org.eclipse.cdt.cross.arc.gnu.ARC_EB_GCCManagedMakePerProjectProfileCXX|org.eclipse.cdt.cross.arc.gnu.ARC_GCCStandardMakePerFileProfile"
-                  superClass="org.eclipse.cdt.cross.arc.gnu.eb.cpp.compiler.input">
+                  superClass="org.eclipse.cdt.cross.arc.gnu.cpp.compiler.input">
             </inputType>
          </tool>
          <tool
@@ -4654,7 +4640,7 @@
             <inputType
                   id="org.eclipse.cdt.cross.arc.gnu.hs.eb.linux.c.compiler.base.input"
                   scannerConfigDiscoveryProfileId="org.eclipse.cdt.cross.arc.gnu.ARC_EB_GCCManagedMakePerProjectProfileC|org.eclipse.cdt.cross.arc.gnu.ARC_GCCStandardMakePerFileProfile"
-                  superClass="org.eclipse.cdt.cross.arc.gnu.eb.c.compiler.input">
+                  superClass="org.eclipse.cdt.cross.arc.gnu.c.compiler.input">
             </inputType>
          </tool>
          <tool
@@ -4665,7 +4651,7 @@
             <inputType
                   id="org.eclipse.cdt.cross.arc.gnu.hs.eb.linux.cpp.compiler.base.input"
                   scannerConfigDiscoveryProfileId="org.eclipse.cdt.cross.arc.gnu.ARC_EB_GCCManagedMakePerProjectProfileCXX|org.eclipse.cdt.cross.arc.gnu.ARC_GCCStandardMakePerFileProfile"
-                  superClass="org.eclipse.cdt.cross.arc.gnu.eb.cpp.compiler.input">
+                  superClass="org.eclipse.cdt.cross.arc.gnu.cpp.compiler.input">
             </inputType>
          </tool>
          <tool
@@ -5173,7 +5159,7 @@
             <inputType
                   id="org.eclipse.cdt.cross.arc.gnu.700.eb.linux.c.compiler.base.input"
                   scannerConfigDiscoveryProfileId="org.eclipse.cdt.cross.arc.gnu.ARC_EB_GCCManagedMakePerProjectProfileC|org.eclipse.cdt.cross.arc.gnu.ARC_GCCStandardMakePerFileProfile"
-                  superClass="org.eclipse.cdt.cross.arc.gnu.eb.c.compiler.input">
+                  superClass="org.eclipse.cdt.cross.arc.gnu.c.compiler.input">
             </inputType>
          </tool>
          <tool
@@ -5184,7 +5170,7 @@
             <inputType
                   id="org.eclipse.cdt.cross.arc.gnu.700.eb.linux.cpp.compiler.base.input"
                   scannerConfigDiscoveryProfileId="org.eclipse.cdt.cross.arc.gnu.ARC_EB_GCCManagedMakePerProjectProfileCXX|org.eclipse.cdt.cross.arc.gnu.ARC_GCCStandardMakePerFileProfile"
-                  superClass="org.eclipse.cdt.cross.arc.gnu.eb.cpp.compiler.input">
+                  superClass="org.eclipse.cdt.cross.arc.gnu.cpp.compiler.input">
             </inputType>
          </tool>
          <tool
@@ -5564,7 +5550,7 @@
             <inputType
                   id="org.eclipse.cdt.cross.arc.gnu.600.eb.linux.c.compiler.base.input"
                   scannerConfigDiscoveryProfileId="org.eclipse.cdt.cross.arc.gnu.ARC_EB_GCCManagedMakePerProjectProfileC|org.eclipse.cdt.cross.arc.gnu.ARC_GCCStandardMakePerFileProfile"
-                  superClass="org.eclipse.cdt.cross.arc.gnu.eb.c.compiler.input">
+                  superClass="org.eclipse.cdt.cross.arc.gnu.c.compiler.input">
             </inputType>
          </tool>
          <tool
@@ -5575,7 +5561,7 @@
             <inputType
                   id="org.eclipse.cdt.cross.arc.gnu.600.eb.linux.cpp.compiler.base.input"
                   scannerConfigDiscoveryProfileId="org.eclipse.cdt.cross.arc.gnu.ARC_EB_GCCManagedMakePerProjectProfileCXX|org.eclipse.cdt.cross.arc.gnu.ARC_GCCStandardMakePerFileProfile"
-                  superClass="org.eclipse.cdt.cross.arc.gnu.eb.cpp.compiler.input">
+                  superClass="org.eclipse.cdt.cross.arc.gnu.cpp.compiler.input">
             </inputType>
          </tool>
          <tool
