--- a/org.eclipse.cdt.cross.arc.gnu.uclibc/build.properties
+++ b/org.eclipse.cdt.cross.arc.gnu.uclibc/build.properties
@@ -8,3 +8,6 @@ bin.includes = META-INF/,\
                README.txt,\
                pluginwithoutcreat.xml,\
                plugin.xml
+javacSource = 1.7
+javacTarget = 1.7
+
