--- a/org.eclipse.cdt.cross.arc.gnu/build.properties
+++ b/org.eclipse.cdt.cross.arc.gnu/build.properties
@@ -12,3 +12,5 @@ bin.includes = META-INF/,\
                src/,\
                templates/,\
                .classpath
+javacSource = 1.7
+javacTarget = 1.7
