Add filter by extension for TCF path browse dialog
Signed-off-by: Anna Pologova <anna.pologova@synopsys.com>

--- a/org.eclipse.cdt.cross.arc.gnu/plugin.xml
+++ b/org.eclipse.cdt.cross.arc.gnu/plugin.xml
@@ -688,6 +688,7 @@
       </option>
       <option
             applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
+            browseFilterExtensions="*.tcf"
             browseType="file"
             id="org.eclipse.cdt.cross.arc.gnu.base.option.target.filefortcf"
             isAbstract="false"
