9001027655 Build both C and C++ files in a project
Before for C++ projects only G++ compiler was available, so C files
could not be compiled. Similarly for C projects it was impossible to
compile C++ files. This commit adds GCC and G++ to both C and C++
projects so that C files were compiled by GCC and C++ files by G++
regardless of project type.

Signed-off-by: Anna Pologova <anna.pologova@synopsys.com>

--- a/org.eclipse.cdt.cross.arc.gnu.uclibc/plugin.xml
+++ b/org.eclipse.cdt.cross.arc.gnu.uclibc/plugin.xml
@@ -775,7 +775,7 @@
             id="org.eclipse.cdt.cross.arc.gnu.uclibc.c.compiler"
             isAbstract="false"
             name="ARC uClibc GCC C Compiler"
-            natureFilter="cnature"
+            natureFilter="both"
             outputFlag="-o">
          <supportedProperties>
             <property
@@ -1061,7 +1061,7 @@
             id="org.eclipse.cdt.cross.arc.gnu.uclibc.cpp.compiler"
             isAbstract="false"
             name="ARC uClibc GCC C++ Compiler"
-            natureFilter="ccnature"
+            natureFilter="both"
             outputFlag="-o">
          <supportedProperties>
             <property
@@ -3490,7 +3490,7 @@
             id="org.eclipse.cdt.cross.arc.gnu.eb.uclibc.c.compiler"
             isAbstract="false"
             name="ARC uClibc GCC C Compiler (EB)"
-            natureFilter="cnature"
+            natureFilter="both"
             outputFlag="-o">
          <supportedProperties>
             <property
@@ -3776,7 +3776,7 @@
             id="org.eclipse.cdt.cross.arc.gnu.eb.uclibc.cpp.compiler"
             isAbstract="false"
             name="ARC uClibc GCC C++ Compiler (EB)"
-            natureFilter="ccnature"
+            natureFilter="both"
             outputFlag="-o">
          <envVarBuildPath
                pathType="buildpathInclude"
