Rename 'Empty C++ Project for EM SK' templates
These templates in C project creation dialog are called just 'Empty
Project for EM SK', and empty projects for AXS10x are also called just
'Empty Projects'.

Renaming 'Empty C++ Projects' for compatibility reasons.

Signed-off-by: Anna Pologova <anna.pologova@synopsys.com>

--- a/org.eclipse.cdt.cross.arc.gnu/templates/projecttemplates/EM6_Empty_CPP_Project/template.properties
+++ b/org.eclipse.cdt.cross.arc.gnu/templates/projecttemplates/EM6_Empty_CPP_Project/template.properties
@@ -11,7 +11,7 @@
 ###############################################################################
 
 #Template Default Values
-Emptyem6.Ctemplate.label=Empty C++ Project For EM SK EM6
+Emptyem6.Ctemplate.label=Empty Project For EM SK EM6
 Emptyem6.Ctemplate.description=A skeletal Managed C++ project for EM Starter Kit EM6. Creates a folder for sources and contains linker script and start file.
 Emptyem6.basics.label=Basic Settings
 Emptyem6.basics.description=Basic properties of a project
