--- a/org.eclipse.cdt.cross.arc.gnu/templates/projecttemplates/EM7_Empty_CPP_Project/template.properties
+++ b/org.eclipse.cdt.cross.arc.gnu/templates/projecttemplates/EM7_Empty_CPP_Project/template.properties
@@ -11,7 +11,7 @@
 ###############################################################################
 
 #Template Default Values
-Emptyem7.CCtemplate.label=Empty C++ Project For EM SK EM7D
+Emptyem7.CCtemplate.label=Empty Project For EM SK EM7D
 Emptyem7.CCtemplate.description=A skeletal Managed C++ project for EM Starter Kit EM7D. Creates a folder for sources and contains linker script and start file.
 Emptyem7.basics.label=Basic Settings
 Emptyem7.basics.description=Basic properties of a project
