--- a/org.eclipse.cdt.cross.arc.gnu/templates/projecttemplates/EM4_Empty_CPP_Project/template.properties
+++ b/org.eclipse.cdt.cross.arc.gnu/templates/projecttemplates/EM4_Empty_CPP_Project/template.properties
@@ -11,7 +11,7 @@
 ###############################################################################
 
 #Template Default Values
-Emptyem4.CCtemplate.label=Empty C++ Project For EM SK EM4
+Emptyem4.CCtemplate.label=Empty Project For EM SK EM4
 Emptyem4.CCtemplate.description=A skeletal Managed C++ project for EM Starter Kit EM4. Creates a folder for sources and contains linker script and start file.
 Emptyem4.basics.label=Basic Settings
 Emptyem4.basics.description=Basic properties of a project
