--- a/com.arc.embeddedcdt/plugin.xml
+++ b/com.arc.embeddedcdt/plugin.xml
@@ -96,11 +96,11 @@
             name="ARC Embedded GDB"
             modes="run"
             cpu="*"
-            class="com.arc.embeddedcdt.EmbeddedGDBCDIDebugger"
+            class="org.eclipse.cdt.dsf.gdb.launching.GDBDebugger"
             id="com.arc.embeddedcdt.EmbeddedCDebugger">
       </debugger>
       <debugger
-            class="com.arc.embeddedcdt.EmbeddedGDBCDIDebugger"
+            class="org.eclipse.cdt.dsf.gdb.launching.GDBDebugger"
             cpu="*"
             id="com.arc.embeddedcdt.RemoteGDBDebugger"
             modes="run"
