Rename RemoteGDBDebuggerPage class to RemoteGdbDebuggerPage
Accordingly to the java naming conventions "GDB" in the name must be
transformed to "Gdb".

--- a/com.arc.embeddedcdt/plugin.xml
+++ b/com.arc.embeddedcdt/plugin.xml
@@ -60,9 +60,9 @@
    <extension
          point="org.eclipse.cdt.debug.ui.CDebuggerPage">
        <debuggerPage
-            class="com.arc.embeddedcdt.gui.RemoteGDBDebuggerPage"
+            class="com.arc.embeddedcdt.gui.RemoteGdbDebuggerPage"
             debuggerID="com.arc.embeddedcdt.RemoteGDBDebugger"
-            id="com.arc.embeddedcdt.gui.RemoteGDBDebuggerPage">
+            id="com.arc.embeddedcdt.gui.RemoteGdbDebuggerPage">
       </debuggerPage>
    </extension>
 	
